Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-9751

TestHS2.test_get_exec_summary is flaky

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • Impala 4.0.0
    • None
    • ghx-label-12

    Description

      TestHS2.test_get_exec_summary failed during the verify job. It was unrelated to the change.

      Error details:

      hs2/hs2_test_suite.py:63: in add_session lambda: fn(self)) hs2/hs2_test_suite.py:44: in add_session_helper fn()
      hs2/hs2_test_suite.py:63: in <lambda> lambda: fn(self)) hs2/test_hs2.py:710: in test_get_exec_summary
      TestHS2.check_response(exec_summary_resp) hs2/hs2_test_suite.py:137: in check_response assert response.status.statusCode == expected_status_code
      E assert 3 == 0
      E + where 3 = 3
      E + where 3 = TStatus(errorCode=None, errorMessage='Query id 354f206894549a18:f1bf0fe400000000 not found.\n', sqlState='HY000', infoMessages=None, statusCode=3).statusCode
      E + where TStatus(errorCode=None, errorMessage='Query id 354f206894549a18:f1bf0fe400000000 not found.\n', sqlState='HY000', infoMessages=None, statusCode=3) = TStatus(errorCode=None, errorMessage='Query id 354f206894549a18:f1bf0fe400000000 not found.\n', sqlState='HY000', infoMessages=None, statusCode=3)
      E + where TStatus(errorCode=None, errorMessage='Query id 354f206894549a18:f1bf0fe400000000 not found.\n', sqlState='HY000', infoMessages=None, statusCode=3) = TGetExecSummaryResp(status=TStatus(errorCode=None, errorMessage='Query id 354f206894549a18:f1bf0fe400000000 not found.\n', sqlState='HY000', infoMessages=None, statusCode=3), summary=None).status

      Stack trace:

      hs2/hs2_test_suite.py:63: in add_session
          lambda: fn(self))
      hs2/hs2_test_suite.py:44: in add_session_helper
          fn()
      hs2/hs2_test_suite.py:63: in <lambda>
          lambda: fn(self))
      hs2/test_hs2.py:710: in test_get_exec_summary
          TestHS2.check_response(exec_summary_resp)
      hs2/hs2_test_suite.py:137: in check_response
          assert response.status.statusCode == expected_status_code
      E   assert 3 == 0
      E    +  where 3 = 3
      E    +    where 3 = TStatus(errorCode=None, errorMessage='Query id 354f206894549a18:f1bf0fe400000000 not found.\n', sqlState='HY000', infoMessages=None, statusCode=3).statusCode
      E    +      where TStatus(errorCode=None, errorMessage='Query id 354f206894549a18:f1bf0fe400000000 not found.\n', sqlState='HY000', infoMessages=None, statusCode=3) = TStatus(errorCode=None, errorMessage='Query id 354f206894549a18:f1bf0fe400000000 not found.\n', sqlState='HY000', infoMessages=None, statusCode=3)
      E    +        where TStatus(errorCode=None, errorMessage='Query id 354f206894549a18:f1bf0fe400000000 not found.\n', sqlState='HY000', infoMessages=None, statusCode=3) = TGetExecSummaryResp(status=TStatus(errorCode=None, errorMessage='Query id 354f206894549a18:f1bf0fe400000000 not found.\n', sqlState='HY000', infoMessages=None, statusCode=3), summary=None).status

      The job that failed:

      [-https://jenkins.impala.io/job/ubuntu-16.04-from-scratch/10622/-]

      https://jenkins.impala.io/job/ubuntu-16.04-from-scratch/10713/testReport/ (please remove this build once this Jira is resolved)

       

       

      Attachments

        Issue Links

          Activity

            People

              tarmstrong Tim Armstrong
              boroknagyz Zoltán Borók-Nagy
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: