IMPALA-9751: increase query log size to 100

This is both a flaky test fix and a change to the default.
I believe the test was flaky because queries had been
aged out of the log before the exec summary was fetched.

We have also found in production that queries often
age out of the log quickly, so the default size can
be too small.

IMPALA-9381 reduces the size of the query log entries,
so hopefully means that the total query log size won't
be significantly larger.

Change-Id: I70a1f8195574287f5df048c13f4a79acd88a81b3
Reviewed-on: http://gerrit.cloudera.org:8080/15972
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>